--- a/style.css
+++ b/style.css
@@ -115,9 +115,9 @@ main .content{
 }
 .address{
     margin: 0.05rem;
-    padding-left:0.2rem;
-    background: url("images/坐标@0.5x.png") no-repeat;
-    background-size: contain;
+    padding-left:0.15rem;
+    background: url("images/坐标@0.5x.png") no-repeat left center;
+    background-size: auto;
 }
 .list{
     width: 100%;
